refactor(tests): enhance type safety with `@NonNull` annotations and simplify resource handling in Netty tests